# tree-sitter-cicode

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file.ci  example.ci  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.xml  tree-sitter.json
bindings/c/: tree-sitter-cicode.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cicode/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCicode/: cicode.h
bindings/swift/TreeSitterCicodeTests/: TreeSitterCicodeTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: arrays.txt  assignments.txt  comments.txt  docstrings.txt  expressions.txt  full_example_code.txt  functioncalls.txt  functions.txt  if_statements.txt  loops.txt  returns.txt  select_case.txt  strings.txt
